fix: allow all origin patterns and expose headers in CORS configuration